--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group">
                         <label for="cpfUsuario">CPF</label>
-                        <input class="form-control" type="tel" id="cpdUsuario" name="cpfUsuario" placeholder="___.___.___-__" required>
+                        <input class="form-control" type="tel" id="cpfUsuario" name="cpfUsuario" placeholder="___.___.___-__" required>
                     </div>
                     <div class="form-group">
                         <label for="telUsuario">Telefone</label>
@@ -123,8 +123,8 @@
                             <input class="form-control" type="month" id="validadeCartao" name="validadeCartao" placeholder="" required/>
                         </div>
                         <div class="col-4">
-                            <label for="segurancaCartao">CVV</label>
-                            <input class="form-control" type="number" id="segurancaCartao" name="segurancaCartao" placeholder="CVV" required/>
+                            <label for="cvv">CVV</label>
+                            <input class="form-control" type="number" id="cvv" name="cvv" placeholder="CVV" required/>
                         </div>
                     </div>
                     <div class="form-group">
@@ -136,15 +136,34 @@
                         <input class="form-control" type="tel" name="cpfTitularCartao" id="cpfTitularCartao" placeholder="___.___.___-__">
                     </div>
                     <div class="d-flex justify-content-end">
-                        <input class="btn btn-success" type="submit" value="Finalizar Compra">
+                        <button class="btn btn-success" type="button"  data-toggle="modal" data-target="#compraFinalizada">Finalizar Compra</button>
                     </div>
             </div>
             </div>
         </form>         
     </main>
+    <div id="compraFinalizada" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Compra realizada com sucesso!</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Uhuuull!</p></br>
+              <p>Parabéns pela sua compra</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+            </div>
+          </div>
+        </div>
+      </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
